[package]
name = "rosa"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
tokio = {
    version = "1",
    features = [
        "full"
    ]
}
reqwest = {
    version = "0.12",
    features = [
        "json",
        "rustls-tls",
        "cookies"
    ],
    default-features = false
}
serde = {
    version = "1",
    features = [
        "derive"
    ]
}
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"